fixed overflow-x 2

--- a/css/screencss.css
+++ b/css/screencss.css
@@ -1,7 +1,3 @@
-html{
-  overflow-x: hidden;
-  height: 100%;
-}
 
 /* About me section - responsive */
 @media only screen and (max-width:1100px){
